# LS_AMG_RAG

./: .gitignore  README.md  pyproject.toml  text.txt  todo.md
LS_AMG_RAG/: prompt_utils.py  utils.py
LS_AMG_RAG/data/additional_docs/: AuditReport.md  CSR_2019-20.md  CSR_2020-21.md  CSR_2022-23.md  CashFlowStatement_2022-23.md  IncomeStatement_2019-20.md  IncomeStatement_2020-21.md  IncomeStatement_2021-22.md  IncomeStatement_2023-24.md  MarketingPlan_1.md  MarketingPlan_2.md  ProjectReport_1.md
LS_AMG_RAG/data/business_docs/: CSR_2021-22.md  CSR_2023-24.md  MarketingPlan_3.md  PressRelease.md  ProjectReport_2.md  ProjectReport_3.md  ProjectReport_4.md  ProjectReport_5.md  ProjectReport_6.md  RiskManagementPlan.md
LS_AMG_RAG/data/company_bylaws/: CustomerServiceScript.md
LS_AMG_RAG/data/financial_docs/: Balance Sheet.md  CashFlowStatement_2019-20.md  CashFlowStatement_2020-21.md  CashFlowStatement_2021-22.md  CashFlowStatement_2023-24.md  Income Statement.md  IncomeStatement_2022-23.md  Tax Return.md
LS_AMG_RAG/data/hr_docs_filled/: Employee Handbook.md
LS_AMG_RAG/metadata_extraction/: metadata.csv  metadata.ipynb
LS_AMG_RAG/metadata_extraction/custom_ner/: TRAIN_DATA.txt  TRAIN_DATA_NER.csv  base_config.cfg  final_ner.ipynb  ner.ipynb  train.spacy
LS_AMG_RAG/metadata_extraction/keyword/: keyword_method_results.csv  keywords.csv  keywords.ipynb  keywords_truelabels.csv
LS_AMG_RAG/rag_chain/: main.py  our_rag.ipynb  rag_utils.py  vanilla_rag.ipynb
LS_AMG_RAG/rag_chain/llama_index_rag/: llamaind.ipynb
LS_AMG_RAG/rag_chain/multihop_rag/: main.py  (+5 more)
(+28 files in other folders)
